# canviz

./: Cargo.toml  tags
data/: anz.dbc  anzen-li-32cell-extended.dbc  anzen-python.dbc  anzen.dbc  cell-level.dbc  config.yaml  sample.dbc
src/: configs.rs  main.rs  main.rs.old
src/configs/: systemvalues.rs  sysval.rs
